# polymap-backend

./: CMakeLists.txt  Makefile  main.py  readme.md  requests.http  requirements.txt
data/: easy-test.json  spacemaker-data.json
src/polygon_operations/: compute.cpp  conversion.cpp  conversion.hpp  intersection.cpp  union.cpp
